<resources>
    <string name="app_name">AccentureFeed</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="login">Login</string>
    <string name="login_name_textview">Accenture Feed</string>
    <string name="edit_text_enter_name">Enter Name</string>
    <string name="edit_text_enter_password">Password</string>
    <string name="login_butoon">Login</string>
    <string name="facebook_app_id">197088717292532</string>
    
    <string-array name="all_activities">
        <item>Categories</item>
        <item>Items</item>
        <item>detailItem</item>
    </string-array>
</resources>
