<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8fffffff">


<RelativeLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <TextView
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textview"
            android:textSize="35sp"
            android:layout_centerHorizontal="true"
            android:paddingBottom="8dp"
            android:layout_marginTop="8dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_name_textview"
            android:id="@+id/textView"
            android:layout_below="@+id/textview"
            android:layout_centerHorizontal="true"
            android:textColor="#ff7aff24"
            android:textSize="35sp"
            android:paddingBottom="10dp"/>

        <TextView
            android:layout_below="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/error"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp"
            android:layout_marginBottom="10dp"

            />


    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextentername"
            android:hint="@string/edit_text_enter_name"
            android:focusable="true"
            android:textColorHighlight="#ff7eff15"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/textView" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edittextenterpassword"
            android:layout_below="@+id/editTextentername"
            android:hint="@string/edit_text_enter_password" />

        <Button
            android:id="@+id/loginbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_butoon"
            android:layout_below="@+id/edittextenterpassword"
            android:layout_centerHorizontal="true"
            />

    </RelativeLayout>


</ScrollView>